--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div id="header">Header</div>
         <div id="profile-container">
-            <img id="profile-image" src="images/anggapratama.jpeg" alt="profile image" />
+            <img id="profile-image" src="Img/dian.jpg" alt="profile image" />
             <h2 id="profile-name">Dian</h2>
         </div>
     </body>
