--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
             <img id="profile-image" src="images/anggapratama.jpeg" alt="profile image" />
             <h2 id="profile-name">Dian</h2>
         </div>
+        <div id="footer">Footer</div>
     </body>
 </html>
